--- a/src/main/resources/static/html/index.html
+++ b/src/main/resources/static/html/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="../static/js/jquery-3.4.1.min.js"></script>
-    <script src="../static/js/angular.js"></script>
-    <script src="../static/js/bootstrap.js"></script>
-    <script src="../static/js/sfPageScript.js"></script>
+    <script src="../js/jquery-3.4.1.min.js"></script>
+    <script src="../js/angular.js"></script>
+    <script src="../js/bootstrap.js"></script>
+    <script src="../js/sfPageScript.js"></script>
 
-    <link href="../static/css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="../css/bootstrap.css" rel="stylesheet" type="text/css">
 
     <title>Sf Page Builder</title>
 </head>
