--- a/src/main/resources/static/html/index.html
+++ b/src/main/resources/static/html/index.html
@@ -8,6 +8,7 @@
     <script src="../js/angular.js"></script>
     <script src="../js/bootstrap.js"></script>
     <script src="../js/sfPageScript.js"></script>
+    <script src="../js/canvas.js"></script>
 
     <link href="../css/bootstrap.css" rel="stylesheet" type="text/css">
 
