--- a/src/main/resources/static/html/index.html
+++ b/src/main/resources/static/html/index.html
@@ -8,6 +8,7 @@
     <script src="../js/angular.js"></script>
     <script src="../js/bootstrap.js"></script>
     <script src="../js/canvas.js"></script>
+    <script src="../js/grapes.js"></script>
     <script src="../js/sfPageScript.js"></script>
 
     <link href="../css/bootstrap.css" rel="stylesheet" type="text/css">
@@ -22,7 +23,9 @@
     </select>
 
     <ul>
-        <li ng-repeat="eachField in allFields">{{eachField}}</li>
+        <li ng-repeat="eachField in allFields">
+            <button>{{eachField}}</button>
+        </li>
     </ul>
 </div>
 
